add docker compose yml file

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -69,4 +69,37 @@ management:
         include: health,info,metrics,mcp
   endpoint:
     health:
-      show-details: always 
+      show-details: always
+
+---
+# Docker Profile Configuration
+spring:
+  config:
+    activate:
+      on-profile: docker
+  
+  # PostgreSQL Database Configuration for Docker
+  datasource:
+    url: jdbc:postgresql://postgres:5432/memvid
+    driver-class-name: org.postgresql.Driver
+    username: memvid
+    password: memvid123
+  
+  # JPA Configuration for PostgreSQL
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: false
+    properties:
+      hibernate:
+        format_sql: false
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+
+# Logging Configuration for Docker
+logging:
+  level:
+    com.memvid: INFO
+    org.springframework.ai.mcp: INFO
+    org.hibernate.SQL: WARN
+    org.hibernate.type.descriptor.sql.BasicBinder: WARN 
